# sim_attpc

./: .gitignore  CMakeLists.txt  README.txt  draw_filtered_evt.cc  gen_training_data.cc  init.mac  sim_attpc.cc  vis.mac
gmacros/: bragg_peak.mac  braggs_curve.mac  eloss_fluc.mac  ionranges.mac  pad_charges.mac  pad_charges_vis.mac  test_data.mac  training_data.mac  trajectories_overlap.mac  trajectories_overlap_vis.mac
include/: ActionInitialization.hh  AnalysisManager.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  Exception.hh  GasChamberHit.hh  GasChamberSD.hh  MagneticField.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunActionMessenger.hh  test.cc
include/analysis/: TuplePostProcessor.hh  TupleVectorContainer.hh  TupleVectorContainerException.hh
include/config/: ParamContainer.hh  ParamContainerException.hh  ParamContainerTable.hh  ParamContainerTableBuilder.hh  ParamContainerTableException.hh  ParamFileReader.hh  ParamFileReaderFactory.hh  ParamFileReaderFactoryException.hh  ParamFileReaderTxt.hh
include/custom_processes/: CarbonAlphaProcess.hh
include/custom_processes/carbon_alpha/: CarbonAlphaProcess.hh  CarbonAlphaProcessMessenger.hh
include/custom_processes/generic_ion_gas/: GenericIonGasModel.hh
include/custom_processes/mean_free_path/: MeanFreePathByKinE.hh  MeanFreePathByKinEuniform.hh  MeanFreePathByTrkLen.hh  MeanFreePathByTrkLenUniform.hh  MeanFreePathEval.hh
include/detector_construction/: DetectorConstruction.hh  DetectorConstructionException.hh  DetectorConstructionMessenger.hh  GasMaterialTable.hh
include/draw_filtered_evt/: DrawPadEvent.hh  DrawPadGrid.hh  PadEvent.hh
include/draw_filtered_evt/FilterNext/: FilterNext.hh
include/draw_filtered_evt/Iterator/: EventIterator.hh  IIterator.hh
include/draw_filtered_evt/Specification/: AndSpecification.hh  ISpecification.hh  SpecParticleNum.hh  SpecParticleSecondary.hh  SpecParticleType.hh  SpecTrue.hh
include/exception/: Exception.hh
include/gas/: GasMaterialTable.hh  GasMixtureProperties.hh  GasMixturePropertiesException.hh
include/gas_chamber/: GasChamberDigi.hh  GasChamberDigitizer.hh  GasChamberHit.hh  GasChamberSD.hh
include/gas_chamber/diffusion/: DiffusionGaussian.hh
include/readout/: ChargeConverter.hh  Converter.hh
include/training_data/: GenTrainingData.hh  GenTrainingDataException.hh  TrainingDataTypes.hh
include/tree_merger/: TreeMerger.hh  TreeMergerException.hh
include/tuple/: ITupleInitializer.hh  TupleGasChamberInitializer.hh  TupleInitializer.hh  TupleInitializerBase.hh  TupleInitializerGasChamber.hh  TupleManager.hh  TupleVectorContainer.hh  TupleVectorContainerException.hh  TupleVectorManager.hh  TupleVectorManagerException.hh
include/tuple_vector/: TupleVectorContainer.hh  TupleVectorContainerException.hh  TupleVectorManager.hh  TupleVectorManagerException.hh
parameters/: config.txt  gas_chamber.txt
parameters/bragg_peak/: gas_chamber.txt
parameters/elos_fluc/: config.txt  gas_chamber.txt
resources/gas_file/: He_90_iC4H10_10_0019.gas  He_90_iC4H10_10_0038.gas
rmacros/: AddTrees.cc  DrawBraggPeak.cc  DrawBraggsCurve.cc  DrawPadCharges.cc  EventDrawingAction.hh
rmacros/BranchAdderBase/: BranchAdderBase.hh
rmacros/BranchSummation/: BranchAppender.hh  BranchSummation.hh  EntrySummation.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  Exception.cc  GasChamberHit.cc  GasChamberSD.cc  MagneticField.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  RunActionMessenger.cc
src/analysis/: TuplePostProcessor.cc  TupleVectorContainerException.cc
src/config/: ParamContainer.cc  ParamContainerException.cc  ParamContainerTable.cc  ParamContainerTableBuilder.cc  ParamContainerTableException.cc  ParamFileReaderFactoryException.cc  ParamFileReaderTxt.cc
src/custom_processes/: CarbonAlphaProcess.cc
src/custom_processes/carbon_alpha/: CarbonAlphaProcess.cc  CarbonAlphaProcessMessenger.cc
src/custom_processes/generic_ion_gas/: GenericIonGasModel.cc
src/custom_processes/mean_free_path/: MeanFreePathByKinE.cc  MeanFreePathByKinEuniform.cc  MeanFreePathByTrkLen.cc  MeanFreePathByTrkLenUniform.cc  MeanFreePathEval.cc
src/detector_construction/: DetectorConstruction.cc  DetectorConstructionException.cc  DetectorConstructionMessenger.cc  GasMaterialTable.cc
src/draw_filtered_evt/: DrawPadEvent.cc
src/exception/: Exception.cc
src/gas/: GasMaterialTable.cc  GasMixtureProperties.cc  GasMixturePropertiesException.cc
src/gas_chamber/: GasChamberDigi.cc  GasChamberDigitizer.cc  GasChamberHit.cc  GasChamberSD.cc
src/gas_chamber/diffusion/: DiffusionGaussian.cc
src/readout/: ChargeConverter.cc
src/training_data/: GenTrainingData.cc  GenTrainingDataException.cc
src/tree_merger/: TreeMerger.cc  TreeMergerException.cc
src/tuple/: TupleInitializer.cc  TupleInitializerBase.cc  TupleInitializerGasChamber.cc  TupleVectorContainer.cc  TupleVectorContainerException.cc  TupleVectorManager.cc  TupleVectorManagerException.cc
src/tuple_vector/: TupleVectorContainer.cc  TupleVectorContainerException.cc  TupleVectorManager.cc  TupleVectorManagerException.cc
